fix compile errors
[2023-03-03T09:10:18.856Z] [ERROR] Failed to execute goal org.gaul:modernizer-maven-plugin:1.7.1:modernizer (modernizer) on project presto-testng-services: Found 1 violations -> [Help 1]
[2023-03-03T09:10:18.856Z] [ERROR] Failed to execute goal org.gaul:modernizer-maven-plugin:1.7.1:modernizer (modernizer) on project presto-testing-docker: Found 9 violations -> [Help 1]
[2023-03-03T09:10:18.856Z] [ERROR] Failed to execute goal org.gaul:modernizer-maven-plugin:1.7.1:modernizer (modernizer) on project presto-spark-classloader-interface: Found 4 violations -> [Help 1]